This file records noteworthy changes.

1.1.1 (<date>)
* lst (and exprseq) provide iterators for read-only element access. For
  sequential access this is one order faster than using op().
* Implemented relational::subs() (this was done in 1.0.9 but inadvertently
  omitted from the 1.1 branch).

1.1.0 (3 April 2003)
* Removed deprecated macros is_ex_a, is_ex_exactly_a and friends for good.
* The scalar_products mechanism allows the specification of an index dimension.
* Removed dirac_gamma6/7().
* Added ex::to_polynomial().
* subs() accepts an optional "options" argument. The option
  subs_option::subs_algebraic enables "smart" substitutions in products and
  powers.
* Added stream manipulators "dflt", "latex", "python", "python_repr", "tree",
  "csrc", "csrc_float", "csrc_double", "csrc_cl_N", "index_dimensions" and
  "no_index_dimensions" to control the output format. Calling basic::print()
  directly is now deprecated.
* Made the hashing more simple and efficient.
* Caveats for class implementors:
   - basic::subs(): third argument changed from "bool" to "unsigned"
   - unarchiving constructor and basic::unarchive(): "const" removed from
     second argument
   - basic::let_op() should only be implemented if write access to
     subexpressions is desired
   - simplify_ncmul() renamed to eval_ncmul()
   - simplified_ncmul() renamed to hold_ncmul()
   - nonsimplified_ncmul() renamed to reeval_ncmul()

1.0.14 (1 March 2003)
* Improved the C-source output: complex numbers are printed correctly (using
  the STL complex<> template or cln::complex()), rational numbers use cl_RA()
  in the CLN output, and small integers are printed in a more compact format
  (e.g. "2.0" instead of "2.0000000e+00").
* function_options::set_return_type() and function_options::do_not_evalf_params()
  now actually work.

1.0.13 (27 January 2003)
* Contracting epsilon tensors with Euclidean indices now works.
* Improved dummy index symmetrization in sums.